--- a/Code Exercise11/index.html
+++ b/Code Exercise11/index.html
@@ -5,8 +5,8 @@
 <head>
 
   <title>Checkerboard</title>
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
-
+  <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="NO_TOUCHING.css">
 </head>
 
 <body>
